@@ -45,6 +45,9 @@ GNU coreutils NEWS                                    -*- outline -*-
   dd accepts a new status=progress level to print data transfer statistics
   on stderr approximately every second.
 
+  split accepts a new --separator option to select a record separator character
+  other than the default newline character.
+
 ** Changes in behavior
 
   df no longer suppresses separate exports of the same remote device, as
